2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b70

 * Fix: Manifest was empty !

 * Fix: HTML fixes in Setup

 * Fix: Lots of missing SVN IDs

2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b69

 * Fix: Don't show empty tooltips in thumbsview.

2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b68

 * NEW: Its now possible to resize the orginal version.

   Changes in:
	- popups/resize_photo.php
        - classes/Album.php
        - classes/AlbumItem.php
        - classes/Image.php
   
   At a first glance its VERY slow. If someone wanna tune it ..

2007-06-06 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b67

 * Change: Remove unneeded param $pathToResized from
           Album::resizeAllPhotos

 * Fix: Correct call of the method above.

2007-05-25 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b66

 * Fix: Unquoted indexes in ecardform

 * Fix: Wrong trigger for default email_sender in ecardform.

2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b65

 * Change: Renamed feaure photo block to feature item block.

 * Fix: Link an featured subalbum did not work.

 * Fix: Removed debug code in microthumb.

 Thanks again to Kai.

2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b64

 * New: In Joomla! and Mambo you can now enter which userlevel
        is allowed to create rootalbums.
        Uninstall/install of component required.

 * New: Method canCreateRootAlbum() for joomla/mambo user

 * Change: Revert table name back to '#__gallery'

2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b63

 * Change: Make breadcrumb a divset (instead of table)

2007-05-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b62

 * Fix: full parameter was recognized in microthumb nav in photo view.
   Thanks to Kai.

2007-05-03 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b61

 * Fix: Little Typo

 * Change: use @ before mkdir in platform/*

2007-05-02 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b60

 * "Fix": Lots of phpdoc adds, indenting and gTranslate() 
