@@ -1,3 +1,13 @@
+2007-06-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b71
+
+ * Fix: Autorotation on upload didnt work.
+
+ * Fix: Wrong translation calles in lib/content.
+
+ * Fix: The "go go go" message in setup was no translated.
+
+ * Manifest update.
+
 2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b70
 
  * Fix: Manifest was empty !
